--- a/pre_alfa-0.00.01/Bords&Controllers/Area/area.storyboard
+++ b/pre_alfa-0.00.01/Bords&Controllers/Area/area.storyboard
@@ -18,51 +18,81 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5i-X3-2XO">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5i-X3-2XO">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="Menu:" destination="PiZ-dm-phu" eventType="touchUpInside" id="dbn-MY-yxL"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7yu-uV-rmt">
-                                <rect key="frame" x="138" y="24" width="99" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7yu-uV-rmt">
+                                <rect key="frame" x="138" y="40" width="99" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="99" id="Dmz-Yr-YSQ"/>
+                                    <constraint firstAttribute="height" constant="17" id="lg9-Zm-dAt"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHv-Cg-Fl3">
-                                <rect key="frame" x="283" y="311" width="76" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VHv-Cg-Fl3">
+                                <rect key="frame" x="283" y="321" width="76" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="76" id="8Bx-k3-Kg0"/>
+                                    <constraint firstAttribute="height" constant="45" id="maI-aG-mmx"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bw9-g1-bwx">
-                                <rect key="frame" x="16" y="311" width="86" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ic6-Wd-viR">
-                                <rect key="frame" x="164" y="318" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ic6-Wd-viR">
+                                <rect key="frame" x="164" y="328.5" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="GLv-6C-MD7"/>
+                                    <constraint firstAttribute="height" constant="30" id="b2W-ta-7WB"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="Fight:" destination="PiZ-dm-phu" eventType="touchUpInside" id="IZI-jd-cpu"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuV-bk-H9K">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cuV-bk-H9K">
                                 <rect key="frame" x="138" y="630" width="99" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="KMx-sB-wbC"/>
+                                    <constraint firstAttribute="width" constant="99" id="W8S-uf-864"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bw9-g1-bwx">
+                                <rect key="frame" x="9" y="321" width="86" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="VUW-vY-lIh"/>
+                                    <constraint firstAttribute="width" constant="86" id="aOf-5R-ZHb"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8JU-1Y-duT" firstAttribute="trailing" secondItem="VHv-Cg-Fl3" secondAttribute="trailing" constant="16" id="1nP-dg-7S1"/>
+                            <constraint firstItem="s5i-X3-2XO" firstAttribute="leading" secondItem="8JU-1Y-duT" secondAttribute="leading" id="9dl-Yj-Eyx"/>
+                            <constraint firstItem="VHv-Cg-Fl3" firstAttribute="centerY" secondItem="8JU-1Y-duT" secondAttribute="centerY" id="LG6-L8-rVp"/>
+                            <constraint firstItem="s5i-X3-2XO" firstAttribute="bottom" secondItem="8JU-1Y-duT" secondAttribute="bottom" id="OVA-U2-WUv"/>
+                            <constraint firstItem="bw9-g1-bwx" firstAttribute="centerY" secondItem="8JU-1Y-duT" secondAttribute="centerY" id="RiL-x1-Vcm"/>
+                            <constraint firstItem="8JU-1Y-duT" firstAttribute="bottom" secondItem="cuV-bk-H9K" secondAttribute="bottom" constant="20" id="aIe-qh-jAU"/>
+                            <constraint firstItem="bw9-g1-bwx" firstAttribute="leading" secondItem="8JU-1Y-duT" secondAttribute="leading" constant="9" id="bBO-cf-RXz"/>
+                            <constraint firstItem="Ic6-Wd-viR" firstAttribute="centerX" secondItem="8JU-1Y-duT" secondAttribute="centerX" id="cft-UY-XCk"/>
+                            <constraint firstItem="Ic6-Wd-viR" firstAttribute="centerY" secondItem="8JU-1Y-duT" secondAttribute="centerY" id="iOK-gM-01H"/>
+                            <constraint firstItem="cuV-bk-H9K" firstAttribute="centerX" secondItem="8JU-1Y-duT" secondAttribute="centerX" id="m70-gA-Zr5"/>
+                            <constraint firstItem="s5i-X3-2XO" firstAttribute="trailing" secondItem="8JU-1Y-duT" secondAttribute="trailing" id="pLw-kL-LFc"/>
+                            <constraint firstItem="7yu-uV-rmt" firstAttribute="centerX" secondItem="8JU-1Y-duT" secondAttribute="centerX" id="uYG-99-4n7"/>
+                            <constraint firstItem="7yu-uV-rmt" firstAttribute="top" secondItem="8JU-1Y-duT" secondAttribute="top" constant="20" id="uz7-R7-TzW"/>
+                            <constraint firstItem="s5i-X3-2XO" firstAttribute="top" secondItem="KTU-Oo-ZMi" secondAttribute="top" id="yno-Q5-DEG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="8JU-1Y-duT"/>
                     </view>
                     <connections>
