--- a/pre_alfa-0.00.01/Bords&Controllers/Main/Model~.storyboard
+++ b/pre_alfa-0.00.01/Bords&Controllers/Main/Model~.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Menu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJx-Cm-ubR" userLabel="MainMenu">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Menu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJx-Cm-ubR">
                                 <rect key="frame" x="145" y="207" width="85" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -60,11 +60,27 @@
                     </view>
                     <connections>
                         <outlet property="fgd" destination="vJx-Cm-ubR" id="3Zh-UM-tbR"/>
+                        <segue destination="voP-wh-5rc" kind="show" id="ZmO-7B-G0E"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PZn-dJ-oaq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="461.60000000000002" y="113.79310344827587"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kPw-lO-8nm">
+            <objects>
+                <viewController id="voP-wh-5rc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="A8v-jM-0Yu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="wgq-1U-e2b"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kiS-4A-0hF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1207" y="130"/>
         </scene>
     </scenes>
 </document>
