--- a/pre_alfa-0.00.01/Bords&Controllers/Main/MapView~.storyboard
+++ b/pre_alfa-0.00.01/Bords&Controllers/Main/MapView~.storyboard
@@ -60,11 +60,27 @@
                     </view>
                     <connections>
                         <outlet property="fgd" destination="vJx-Cm-ubR" id="3Zh-UM-tbR"/>
+                        <segue destination="K9Q-th-uAF" kind="show" id="egm-eV-18P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PZn-dJ-oaq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="461.60000000000002" y="113.79310344827587"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ols-ou-JQv">
+            <objects>
+                <viewController id="K9Q-th-uAF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fWP-uS-crt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="9gO-w5-Ujd"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pGy-8M-S7M" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1359" y="127"/>
         </scene>
     </scenes>
 </document>
